# Tori

./: .env.development  .env.example  .env.production  .eslintrc.js  .gitignore  .jestignore  .mcp.json  .tool-versions  ALAN IDE Development Roadmap.docx  ALAN_ADVANCED_ROADMAP.md  ALAN_IMPLEMENTATION_SUMMARY.md  ALAN_QUICK_START.md  ALAN_REASONING_README.md  ALIEN_CALCULUS_README.md  ANIMATION-README.md  AUTHENTICATION_TROUBLESHOOTING_GUIDE.md  AgentDock.jsx  AttractorMapPanel.jsx  BANKSY_INTEGRATION_COMPLETE.md  BANKSY_RESTORATION_ROADMAP.md  BATCH_PROCESSING_README.md  BUCKET-VIEWER-README.md  BUILD_AND_DEPLOY_TORI_CHAT.md  CHAT_AUTOSCROLL_COMPLETE.md  CHAT_INTEGRATION_SUCCESS.md  CLAUDE_SESSION_SUMMARY_2025-06-03.md  CLINE_EXPORT_README.md  COMPLETE_CLAUDE_CONVERSATION_2025-06-03.md  COMPLETE_DEPLOYMENT_GUIDE.md  CONVERSATION_EXTRACTION_GUIDE.md  CRITICAL_AUTH_FIX.md  ConceptCapsuleEditor.jsx  ConceptEditorPanel.jsx  ConceptFieldCanvas.jsx  ConceptFieldCanvasInteractive.jsx  ConceptFieldCanvasMorphAnimated.jsx  ConceptFieldCanvasSynced.jsx  ConceptFieldCanvasVisualEncodings.jsx  DEBUG_MENU.bat  DebugAgentPanel.jsx  (+523 more)
.github/: CRASH_TEMPLATE.md  DIAGNOSTIC_REPORT_TEMPLATE.md  SBOM_CHANGE_TEMPLATE.md
.roo/: mcp.json
ImSpecial/: SOLITON_MEMORY_IMPLEMENTATION_PLAN.md  TORI_System_Briefing_For_Future_Claude.md  TORI_System_Briefing_Part_2_Three_Applications.md
Tori/: DEPLOYMENT.md  Dockerfile.template  Makefile  README.md  build-system.sh  docker-compose.secrets.yml  docker-compose.test.yml  docker-compose.yml  generate_protos.py  prometheus.yml  regenerate-grpc-protos.bat  requirements.txt  test_ghost_ai_integration.py  test_grpc_integration.py  test_koopman_grpc.py  test_koopman_lyapunov_integration.py  test_vault_grpc.py
alan_backend/: __init__.py
alan_core/: Cargo.toml  cbindgen.toml
alan_core/examples/: duffing.rs
alan_core/fuzz/: Cargo.toml
alan_core/fuzz/corpus/fuzz_controller_step/: seed_denormal  seed_highdim  seed_stable
alan_core/fuzz/corpus/fuzz_roundtrip/: seed_chaotic  seed_conservative
alan_core/fuzz/fuzz_targets/: fuzz_controller_step.rs  fuzz_roundtrip.rs
alan_core/src/: ffi.rs  lib.rs
alan_core/src/controller/: mod.rs  trs_ode.rs
alan_core/src/elfin/: mod.rs
alan_core/src/oscillator/: integ.rs  mod.rs  phase.rs  spin.rs
alan_core/src/snapshot/: mod.rs
alan_core/tests/: duffing_roundtrip.rs  yoshida4_duffing.rs
analysis/: alien.py  braid_groupoid.py  nlp_service.py  scaling.py  semantic_bridge.py  vision_service.py
backend/: bandwidth_metrics.py  main.py  metrics.py  metrics_utils.py  phase_downsampler.py
backup_20250530_110222/: extractConceptsFromDocument_backup.py  main_backup.py  pipeline_backup.py
backups/: concepts_20250511_164812.json  concepts_20250511_164812.npz
chat/: README.md
chatenterprise/: package.json  standalone.html  standalone.js  start-demo.js  vite.config.js
ci/: dashboard_test.sh  generate_fuzz_coverage.sh  packaging_test.sh  run_memory_profile.js  rust-tests.yml  triage.sh
client/: .env  .env.development  .eslintrc.js  build-prod.bat  index.html  package.json  setupTests.js  start-react.js  test-es-modules.bat  test-esm-packages.bat  test-intent-tracker.js  vite.config.js  vite.standalone.config.js
client/src/ghost/psi_trajectory/rs_impl/: Cargo.toml  psi_recorder.rs
client/src/ghost/psi_trajectory/rs_impl/src/: export.rs  lib.rs  pattern_matcher.rs  psi_reader.rs  recorder.rs  zstd_compressor.rs
concept-mesh/: .env.oauth.example  Cargo.toml  README.md
concept-mesh/docs/: AUTH_SYSTEM.md  concept-mesh-architecture.md
concept-mesh/src/: cbd.rs  diff.rs  ffi_bridge.rs  lcn.rs  lib.rs  soliton_memory.rs
concept-mesh/src/agents/: mod.rs  orchestrator.rs
concept-mesh/src/auth/: cli.rs  mod.rs  oauth.rs  persona.rs  session.rs  user.rs
concept-mesh/src/cli/: adapter.rs
concept-mesh/src/diff/: user_context.rs
concept-mesh/src/mesh/: mod.rs
concept-mesh/src/psiarc/: header.rs  mod.rs
concept-mesh/src/safety/: lyapunov_certifier.rs  mod.rs
concept-mesh/src/tools/: genesis_cli.rs  psiarc_replay.rs  psidiff_validate.rs  psidiff_viewer.rs  psidiff_viewer_cli.rs
concept-mesh/src/ui/: genesis_bridge.rs
concept-mesh/tests/: user_attribution_test.rs
dashboard/: package.json
docs/: # Comprehensive ELFIN Development R.txt  # Optimized ψ-Trajectory Implementa.txt  12-Hour Implementation Plan x.txt  2. Composite Scoring and Ranking.txt  2.txt  2501.12881v1.txt  25thhour.txt  3. Concept Lineage and Traceability.txt  4. Paradigms Beyond Oscillators.txt  4. UI Visualization and Filtering (.txt  48hrlist.txt  5. Evaluation Harness.txt  A Deep Dive Into MCP and the Future of AI Tooling.docx  ALAN IDE Phase 3 Analysis & Impleme.txt  ALAN_IDE_Phase3_Implementation_Plan.md  ALAN_IDE_Phase3_Implementation_Progress.md  ALAN_IDE_Phase3_Sprint2_Implementation.md  ALAN_PHASE_COHERENT_REASONING.md  ALAN_Phase1_Milestone_Report.md  ALIEN.txt  AV_VSCODE.txt  Activate ELFIN++ and Rewire UI for.txt  An IDE, or Integrated Development E.txt  Analyzed.txt  Audit and Optimization of the Concept.txt  BANKSY OSCILLATOR FORENSIC REPO.txt  BOOYAH INDEED. 🚀 Let's make sure T.txt  Below is an “engineer-ready” bundle.txt  Better Rewrite of MCP Server Architecture.txt  BetterRewriteFollowup.txt  Blueprint and Debug of Cognitive.txt  BraidMemory.ts - Phase 2 Memory To.txt  Canwedo4d.json  Cathartic Reflection Hook for Creat.txt  Chatgpt has 500.docx  Cognitive arc.docx  Complete Alien Implementation Roadmap.txt  Complete Energy Conditions Analysis.txt  Complete Pre-Launch Gameplan for TORI.txt  Comprehensive Master Plan and Strategic Analysis 05_12_25.docx  (+135 more)
frontend/: package.json
grafana/: ingest-bus-dashboard.json
ide_frontend/: .babelrc  .env  .env.production  .env.production.ide  dev-start.bat  jest-transform.js  package.json  tsconfig.json  vite.config.js
ingest-bus/: README.md  start-ingest-bus.bat
ingest_pdf/: app_integrator.py  canonical_ingestion.py  clustering.py  cognitive_interface.py  concept_foundation_test.py  concept_logger.py  concept_metadata.py  demo_output.txt  dynamic_concept_extractor.py  (+37 more)
(+1062 files in other folders)
