# Add soliton memory dependencies to Cargo.toml
[package]
name = "concept-mesh"
version = "0.1.0"
edition = "2021"
authors = ["TORI Team"]
description = "ConceptDiff-based distributed cognitive architecture with Soliton Memory"

[lib]
name = "concept_mesh"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]  # Enable both dynamic library and Rust library

[dependencies]
# Core utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.18"
uuid = { version = "1.8", features = ["v4"] }
md5 = "0.7"

# Mesh communication
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"

# Authentication and identity
reqwest = { version = "0.11", features = ["json"] }
url = "2.4"
rand = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Graph & cognitive processing
petgraph = "0.6"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }

# FFI support for Node.js integration
libc = "0.2"

# Testing utilities
tempfile = "3.5"

# CLI tools
clap = { version = "4.3", features = ["derive"] }
comfy-table = "7.0"

# Visualization
plotly = "0.8"

[features]
default = ["core"]
core = []
ffi = []  # Enable FFI bridge
lab_audio = ["cpal", "crossbeam-channel"]
lab_zoom = ["godot"]
lab_elfin = ["elfin"]
lab_warp = ["z3"]
lab_dice = []

[[bin]]
name = "psidiff-viewer"
path = "src/tools/psidiff_viewer_cli.rs"

[[bin]]
name = "genesis"
path = "src/tools/genesis_cli.rs"

[[bin]]
name = "orchestrator"
path = "src/bin/orchestrator.rs"

[[bin]]
name = "ingest"
path = "src/bin/ingest_cli.rs"

[[bin]]
name = "psiarc-replay"
path = "src/bin/psiarc_replay_cli.rs"

[[bin]]
name = "psidiff-validate"
path = "src/bin/psidiff_validate_cli.rs"

[[bin]]
name = "phase-bus-demo"
path = "src/bin/phase_bus_demo.rs"

[[bin]]
name = "soliton-memory-test"
path = "src/bin/soliton_memory_test.rs"
