[package]
name = "psi_trajectory"
version = "0.1.0"
edition = "2021"
description = "ψ-Trajectory Memory Subsystem"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
telemetry = []          # enable runtime metrics export
secure     = ["ring"]  # encryption feature already present
diagnostics = ["zip", "once_cell", "chrono"] # diagnostics recorder for crash dumps

[dependencies]
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console"] }
memmap2 = "0.5.10"
zstd = "0.12.3"
rand = "0.8.5"
lazy_static = "1.4.0"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
reqwest = { version = "0.11", features=["json"], optional=true }
tracing = "0.1"
ring = { version = "0.17", optional=true }
zip = { version = "0.6", optional = true }
once_cell = { version = "1.8", optional = true }
chrono = { version = "0.4", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
